force-app/main/default/objects/ProdSaleItem__c/ProdSaleItem__c.object-meta.xml
<CustomObject>
    <label>Prod Sale Item</label>
    <nameField>
        <label>Sale Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Sale Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>