force-app/main/default/objects/ProdSaleItem__c/fields/ItemDetailsName__c.field-meta.xml
<CustomField>
    <fullName>ItemDetailsName__c</fullName>
    <label>Item Details Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>