force-app/main/default/objects/ProdSaleItem__c/fields/KMAT__c.field-meta.xml
<CustomField>
    <fullName>KMAT__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>KMAT</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>