force-app/main/default/objects/ProdSaleItem__c/fields/ProdMainSKU__c.field-meta.xml
<CustomField>
    <fullName>ProdMainSKU__c</fullName>
    <label>ProductMain SKU</label>
    <referenceTo>ProducMainSKU__c</referenceTo>
    <relationshipLabel>Prod Sale Items</relationshipLabel>
    <relationshipName>Prod_Sale_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>