force-app/main/default/objects/ProdSaleItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KMAT__c</columns>
    <columns>ProdMainSKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>